--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ body {
     --secondary-text-color: #5c5c62;
     --durability-text-color: #6a737d9c;
     --icon-color: #6a737d;
-    --border-color: #ff9a0045;
-    --text-decoration-color: #ff9a00;
+    --border-color: #148a59;
+    --text-decoration-color: #30c7ae;
 }
 
 .container {
@@ -125,11 +125,11 @@ body {
 }
 
 .contact-info__avatar {
-    border-radius: 50%;
+    border-radius: 8px;
     width: 100px;
     height: 100px;
     object-fit: cover;
-    border: 3px solid;
+    /* border: 3px solid; */
     border-color: var(--text-decoration-color);
 }
 
@@ -199,7 +199,7 @@ body {
 }
 
 .experiences__company-project {
-    margin-left: 15px;
+    /* margin-left: 15px; */ /*Why?*/
     margin-bottom: 25px;
 }
 
